welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:57: error: Unit does not take parameters
 	Motif()
             ^